--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toolslide.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Minimalistic customizable sliding panel without jQuery",
   "main": "dist/js/toolslide.js",
   "scripts": {},
@@ -15,6 +15,10 @@
   ],
   "author": "karenpommeroy <mkarpins@gmail.com>",
   "license": "MIT",
+  "repository": {
+	"type" : "git",
+	"url" : "https://github.com/karenpommeroy/toolslide.js"
+  },
   "devDependencies": {},
   "dependencies": {}
 }
