--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "toolslide.js",
   "description": "Minimalistic customizable sliding panel without jQuery",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": [
-    "dist/js/toolslide.js",
-    "dist/css/toolslide.css"
+    "dist/toolslide.js",
+    "dist/toolslide.css"
   ],
   "dependencies": {},
   "devDependencies": {},
